fixed jumping, bodycontainer size, and scrolling button

--- a/src/app/styles/layout/_bodyContainer.scss
+++ b/src/app/styles/layout/_bodyContainer.scss
@@ -1,5 +1,5 @@
 .body-container1 {
-  height: 94%;
+  height: 100%;
   overflow: hidden;
   display: grid;
   grid-template-columns: min-content 2fr;
